--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello  
+    Hello  TypeScript
     <script src="HelloTs.js"></script>
 </body>
 </html>
